// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Helpers should apply a number display function: number display function result 1`] = `
t {
  "_value": 11,
}
`;

exports[`Helpers should expose a window object: limited window object 1`] = `
Object {
  "DEV_MODE": false,
  "PROD_MODE": false,
  "REVIEW_MODE": false,
  "TEST_MODE": true,
  "UI_DEPLOY_PATH_PREFIX": "",
  "UI_DISABLED": false,
  "UI_DISABLED_GRAPH": false,
  "UI_DISABLED_NOTIFICATIONS": false,
  "UI_DISABLED_TABLE": false,
  "UI_DISABLED_TABLE_HOSTS": false,
  "UI_DISABLED_TABLE_INSTANCES": false,
  "UI_DISABLED_TABLE_SUBSCRIPTIONS": false,
  "UI_DISABLED_TOOLBAR": false,
  "UI_DISPLAY_CONFIG_NAME": "Subscriptions",
  "UI_DISPLAY_NAME": "Subscriptions",
  "UI_DISPLAY_START_NAME": "Subscriptions",
  "UI_LINK_CONTACT_US": "https://access.redhat.com/account-team",
  "UI_LINK_LEARN_MORE": "https://access.redhat.com/documentation/en-us/subscription_central/2021/html/getting_started_with_the_subscriptions_service/con-how-does-subscriptionwatch-show-data_assembly-viewing-understanding-subscriptionwatch-data-ctxt/",
  "UI_LINK_REPORT_ACCURACY_RECOMMENDATIONS": "https://access.redhat.com/solutions/subscription-watch-mismatch",
  "UI_LOCALE_DEFAULT": "en-US",
  "UI_LOCALE_DEFAULT_DESC": "English",
  "UI_LOGGER_FILE": "curiosity_debug_log_{0}.json",
  "UI_LOGGER_ID": "curiosity",
  "UI_NAME": "subscriptions",
  "UI_PATH": "/apps/subscriptions/",
  "UI_VERSION": "0.0.0.0000000",
  "UI_WINDOW_ID": "curiosity",
  "aggregatedError": [Function],
  "browserExpose": [Function],
  "generateId": [Function],
  "isDate": [Function],
  "isPromise": [Function],
  "lorem": "ipsum",
  "noop": [Function],
  "noopPromise": Promise {},
  "noopTranslate": [Function],
  "numberDisplay": [Function],
}
`;

exports[`Helpers should expose a window object: window object 1`] = `
Object {
  "DEV_MODE": false,
  "PROD_MODE": false,
  "REVIEW_MODE": false,
  "TEST_MODE": true,
  "UI_DEPLOY_PATH_PREFIX": "",
  "UI_DISABLED": false,
  "UI_DISABLED_GRAPH": false,
  "UI_DISABLED_NOTIFICATIONS": false,
  "UI_DISABLED_TABLE": false,
  "UI_DISABLED_TABLE_HOSTS": false,
  "UI_DISABLED_TABLE_INSTANCES": false,
  "UI_DISABLED_TABLE_SUBSCRIPTIONS": false,
  "UI_DISABLED_TOOLBAR": false,
  "UI_DISPLAY_CONFIG_NAME": "Subscriptions",
  "UI_DISPLAY_NAME": "Subscriptions",
  "UI_DISPLAY_START_NAME": "Subscriptions",
  "UI_LINK_CONTACT_US": "https://access.redhat.com/account-team",
  "UI_LINK_LEARN_MORE": "https://access.redhat.com/documentation/en-us/subscription_central/2021/html/getting_started_with_the_subscriptions_service/con-how-does-subscriptionwatch-show-data_assembly-viewing-understanding-subscriptionwatch-data-ctxt/",
  "UI_LINK_REPORT_ACCURACY_RECOMMENDATIONS": "https://access.redhat.com/solutions/subscription-watch-mismatch",
  "UI_LOCALE_DEFAULT": "en-US",
  "UI_LOCALE_DEFAULT_DESC": "English",
  "UI_LOGGER_FILE": "curiosity_debug_log_{0}.json",
  "UI_LOGGER_ID": "curiosity",
  "UI_NAME": "subscriptions",
  "UI_PATH": "/apps/subscriptions/",
  "UI_VERSION": "0.0.0.0000000",
  "UI_WINDOW_ID": "curiosity",
  "aggregatedError": [Function],
  "browserExpose": [Function],
  "generateId": [Function],
  "isDate": [Function],
  "isPromise": [Function],
  "lorem": "ipsum",
  "noop": [Function],
  "noopPromise": Promise {},
  "noopTranslate": [Function],
  "numberDisplay": [Function],
}
`;

exports[`Helpers should handle use aggregate error, or fallback: emulated aggregate error 1`] = `
Object {
  "aggregated": [AggregateError: testing aggregated],
  "errors": Array [
    [Error: lorem ipsum],
    [Error: dolor sit],
  ],
  "isEmulated": true,
  "name": "AggregateError",
}
`;

exports[`Helpers should have specific functions: helpers 1`] = `
Object {
  "DEV_MODE": false,
  "PROD_MODE": false,
  "REVIEW_MODE": false,
  "TEST_MODE": true,
  "UI_DEPLOY_PATH_PREFIX": "",
  "UI_DISABLED": false,
  "UI_DISABLED_GRAPH": false,
  "UI_DISABLED_NOTIFICATIONS": false,
  "UI_DISABLED_TABLE": false,
  "UI_DISABLED_TABLE_HOSTS": false,
  "UI_DISABLED_TABLE_INSTANCES": false,
  "UI_DISABLED_TABLE_SUBSCRIPTIONS": false,
  "UI_DISABLED_TOOLBAR": false,
  "UI_DISPLAY_CONFIG_NAME": "Subscriptions",
  "UI_DISPLAY_NAME": "Subscriptions",
  "UI_DISPLAY_START_NAME": "Subscriptions",
  "UI_LINK_CONTACT_US": "https://access.redhat.com/account-team",
  "UI_LINK_LEARN_MORE": "https://access.redhat.com/documentation/en-us/subscription_central/2021/html/getting_started_with_the_subscriptions_service/con-how-does-subscriptionwatch-show-data_assembly-viewing-understanding-subscriptionwatch-data-ctxt/",
  "UI_LINK_REPORT_ACCURACY_RECOMMENDATIONS": "https://access.redhat.com/solutions/subscription-watch-mismatch",
  "UI_LOCALE_DEFAULT": "en-US",
  "UI_LOCALE_DEFAULT_DESC": "English",
  "UI_LOGGER_FILE": "curiosity_debug_log_{0}.json",
  "UI_LOGGER_ID": "curiosity",
  "UI_NAME": "subscriptions",
  "UI_PATH": "/apps/subscriptions/",
  "UI_VERSION": "0.0.0.0000000",
  "UI_WINDOW_ID": "curiosity",
  "aggregatedError": [Function],
  "browserExpose": [Function],
  "generateId": [Function],
  "isDate": [Function],
  "isPromise": [Function],
  "noop": [Function],
  "noopPromise": Promise {},
  "noopTranslate": [Function],
  "numberDisplay": [Function],
}
`;
